k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comixer-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: front-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: review-service-svc
                port:
                  number: 80
